Make it so we can dismiss home page alerts
